--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,9 @@ dependencies:
   country_icons: ^1.1.1
   bubble: ^1.1.9+1
   cloud_functions: ^0.4.2+3
-  flutter_sound: ^3.0.0
-
+  fluttertoast: ^4.0.1
+  firebase_storage: ^3.1.5
+  image_picker: ^0.6.4
   
 dev_dependencies:
   flutter_test:
