--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,8 @@ dependencies:
   fluttertoast: ^4.0.1
   firebase_storage: ^3.1.5
   image_picker: ^0.6.4
-  
+  http: ^0.12.0+4
+    
 dev_dependencies:
   flutter_test:
     sdk: flutter
