--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,8 @@ dependencies:
   firebase_storage: ^3.1.5
   image_picker: ^0.6.4
   http: ^0.12.0+4
-    
+  pull_to_refresh: ^1.5.8
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
