--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   image_picker: ^0.6.4
   http: ^0.12.0+4
   pull_to_refresh: ^1.5.8
+  firebase_database: ^3.1.3
   
 dev_dependencies:
   flutter_test:
