--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,9 @@ dependencies:
   http: ^0.12.0+4
   pull_to_refresh: ^1.5.8
   firebase_database: ^3.1.3
-
+  translator: ^0.1.4
+  firebase_messaging: ^6.0.13
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
